# algebraic_eq_solver

./: .gitignore  MANIFEST.in  PAPER_README.md  README.md  compile_paper.bat  compile_paper.sh  complete_analysis.py  debug_geometry.py  demo_four_solutions.py  extended_solver.py  find_four_solutions.py  four_solution_example.py  github_setup_instructions.md  mathematical_summary.py  numerical_solver.py  pyproject.toml  setup.py  symbolic_coefficients.py  symbolic_derivation.py  test_complex_flag.py  test_null_space_approach.py  test_rank1.py
paper/: PAPER_README.md  README.md  compile_paper.bat  compile_paper.sh
src/algebraic_eq_solver/: __init__.py  cli.py  numerical_solver.py
tests/: test_solver.py
