[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algebraic-eq-solver"
version = "1.0.0"
description = "A robust numerical solver for trigonometric algebraic equations"
authors = [{name = "Robot Kinematics Team", email = "noreply@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.scripts]
trig-solver = "algebraic_eq_solver.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/algebraic_eq_solver"
Repository = "https://github.com/yourusername/algebraic_eq_solver"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
